--- a/gehoortest.application-User.Interface/gehoortest.application-User.Interface.csproj
+++ b/gehoortest.application-User.Interface/gehoortest.application-User.Interface.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>gehoortest_application</RootNamespace>
+    <RootNamespace>gehoortest.application_User.Interface</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
