--- a/gehoorttest.application-Service/gehoorttest.application-Service.csproj
+++ b/gehoorttest.application-Service/gehoorttest.application-Service.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>gehoortest_application.Service</RootNamespace>
+    <RootNamespace>gehoorttest.application_Service</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
