--- a/gehoortest.application-User.Interface/appsettings.json
+++ b/gehoortest.application-User.Interface/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost\\SQLEXPRESS;Database=gehoortest;TrustServerCertificate=True;Trusted_Connection=True;"
+  },
+  "Colors": {
+    "Primary": "",
+    "Secondary": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
