--- a/gehoortest.application-User.Interface/gehoortest.application-User.Interface.csproj
+++ b/gehoortest.application-User.Interface/gehoortest.application-User.Interface.csproj
@@ -7,10 +7,13 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <StartupObject>gehoortest.application_User.Interface.App</StartupObject>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <ApplicationDefinition Remove="App.xaml" />
+    <None Remove="Images\test.png" />
+    <Content Include="favicon.ico" />
 	  <Page Include="App.xaml" />
   </ItemGroup>
 
@@ -23,6 +26,16 @@
   <ItemGroup>
     <ProjectReference Include="..\gehoortest.application-Repository\gehoortest.application-Repository.csproj" />
     <ProjectReference Include="..\gehoorttest.application-Service\gehoorttest.application-Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\test.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\Question.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
