Add interface layer and restructure data-access layer

--- a/gehoortest.application-User.Interface/gehoortest.application-User.Interface.csproj
+++ b/gehoortest.application-User.Interface/gehoortest.application-User.Interface.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\gehoortest.application-Repository\gehoortest.application-Repository.csproj" />
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\gehoorttest.application-Service\gehoorttest.application-Service.csproj" />
   </ItemGroup>
 
