--- a/gehoortest.application-Repository/gehoortest.application-Repository.csproj
+++ b/gehoortest.application-Repository/gehoortest.application-Repository.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\gehoorttest.application-Service\gehoorttest.application-Service.csproj" />
+  </ItemGroup>
+
 </Project>
