--- a/gehoorttest.application-Service/gehoorttest - Backup.application-Service.csproj
+++ b/gehoorttest.application-Service/gehoorttest - Backup.application-Service.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\gehoortest.application-Repository\gehoortest.application-Repository.csproj" />
+		<ProjectReference Include="..\Models\Models.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Projections\" />
+	</ItemGroup>
 </Project>
