Save, saving of question works, edditting of values works few things left to do.

--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositorys\TestData-Management\" />
+  </ItemGroup>
+
 </Project>
