removed timo's trash code. Made it so it works now, changing questions doesnt work yet cause of no database

--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repositorys\TestData-Management\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
