Refactored some code and fixed combobox bug

--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -27,4 +27,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\Core\" />
+    <Folder Include="ViewModels\Test Management\" />
+    <Folder Include="ViewModels\Test\" />
+  </ItemGroup>
+
 </Project>
