Add unit tests for HashingService

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\EmailProvider\EmailProvider.csproj" />
+    <ProjectReference Include="..\HashingService\HashingService.csproj" />
   </ItemGroup>
 
 </Project>
